--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "react-dom": "^16.13.1",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^3.10.0",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.0.0",
+    "react-scripts": "3.4.1",
+    "react-scroll": "^1.8.0",
+    "react-tsparticles": "^1.17.4"
   },
   "scripts": {
     "start": "react-scripts start",
