--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "emailjs-com": "^2.6.3",
     "gsap": "file:gsap-bonus.tgz",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -20,7 +21,9 @@
     "react-router-hash-link": "^2.0.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.8.0",
-    "react-tsparticles": "^1.17.4"
+    "react-tsparticles": "^1.17.4",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
