--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "emailjs-com": "^2.6.3",
     "gsap": "file:gsap-bonus.tgz",
+    "html-react-parser": "^0.14.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
